# agentic-e2e-dicom-medical-pipeline

./: README.md  main.py  pyproject.toml  requirements.txt
agents/: __init__.py  analyzer.py  base.py  coordinator.py  preprocessor.py  visualizer.py
cli/: __init__.py  commands.py  main.py
config/: default_config.yaml
core/: __init__.py  config.py  messages.py  pipeline.py  workflow.py
tests/: mocks.py  test_analyzer.py  test_cli.py  test_coordinator.py  test_core.py  test_interaction.py  test_interactive_viewer.py  test_measurement.py  test_measurement_tools.py  test_neuroimaging.py  test_overlay.py  test_pipeline.py  test_preprocessor.py  test_registration.py  test_roi.py  test_statistics.py  test_visualizer.py
tests/data/: generate_test_data.py
utils/: __init__.py  analysis.py  clustering.py  environment.py  interaction.py  interactive_viewer.py  measurement.py  measurement_tools.py  neuroimaging.py  overlay.py  pipeline.py  registration.py  statistics.py  visualization.py
