[project]
name = "agentic-freesurfer-fsl-segmentation-clustering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.45.2",
    "asyncio>=3.4.3",
    "numpy>=2.2.2",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
]
