[project]
name = "agentic-freesurfer-fsl-segmentation-clustering"
version = "0.1.0"
description = "AI agent-based neuroimaging analysis using FreeSurfer and FSL"
authors = [
    {name = "David Brewster", email = "david.brewster@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "anthropic>=0.7.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "nibabel>=5.2.0",
    "nilearn>=0.10.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.1.0",
    "matplotlib>=3.8.0",
    "plotly>=5.18.0",
    "vtk>=9.3.0",
    "pydicom>=2.4.0",
    "h5py>=3.10.0",
    "requests>=2.31.0",
    "asyncio>=3.4.3",
    "aiohttp>=3.9.0",
    "pydantic>=2.5.0",
    "rich>=13.7.0",
    "tqdm>=4.66.0",
    "pyyaml"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "flake8>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "nibabel.*",
    "nilearn.*",
    "scipy.*",
    "matplotlib.*",
    "plotly.*",
    "vtk.*",
    "rich.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=. --cov-report=xml --cov-report=term-missing"
testpaths = [
    "tests",
]
asyncio_mode = "auto"

[project.scripts]
neuroimaging-pipeline = "main:main"
